# pkg/handlers/handler.go
@@ -1,85 +1,58 @@
 package handlers
 
 import (
+	"bytes"
 	"encoding/json"
 	"fmt"
+	"io/ioutil"
 	"net/http"
 	"os"
-	"strings"
 
-	"gitea-cicd.apps.aws2-dev.ocp.14west.io/cicd/servisbot-authinterface/pkg/connectors"
-	"gitea-cicd.apps.aws2-dev.ocp.14west.io/cicd/servisbot-authinterface/pkg/schema"
-	"github.com/dgrijalva/jwt-go"
+	"gitea-cicd.apps.aws2-dev.ocp.14west.io/cicd/golang-simple-oc4service/pkg/connectors"
+	"gitea-cicd.apps.aws2-dev.ocp.14west.io/cicd/golang-simple-oc4service/pkg/schema"
 )
 
 const (
 	CONTENTTYPE     string = "Content-Type"
 	APPLICATIONJSON string = "application/json"
-	FORBIDDEN       string = "Forbidden"
 )
 
-type Claims struct {
-	jwt.StandardClaims
-}
-
-func AuthHandler(w http.ResponseWriter, r *http.Request, conn connectors.Clients) {
+func EchoHandler(w http.ResponseWriter, r *http.Request, conn connectors.Clients) {
 	var response *schema.Response
+	var req *schema.Request
 
-	token := r.Header.Get(strings.ToLower("Authorization"))
-	conn.Trace("Auth Header : %s", token)
-
-	if token == "" {
-		w.WriteHeader(http.StatusForbidden)
-		response = &schema.Response{Code: 403, StatusCode: "403", Status: "ERROR", Message: FORBIDDEN, Payload: schema.SchemaInterface{}}
-	} else {
-
-		// Remove Bearer
-		tknStr := strings.Trim(token[7:], " ")
-		conn.Info(fmt.Sprintf("Token (trimmed) : %s", tknStr))
-		addHeaders(w, r)
-
-		// Initialize a new instance of `Claims`
-		claims := &Claims{}
-
-		secret := os.Getenv("JWT_SECRETKEY")
-		conn.Trace(fmt.Sprintf("JWT SECRET : %s", secret))
-
-		var jwtKey = []byte(secret)
-
-		// Parse the JWT string and store the result in `claims`.
-		// Note that we are passing the key in this method as well. This method will return an error
-		// if the token is invalid (if it has expired according to the expiry time we set on sign in),
-		// or if the signature does not match
-		tkn, err := jwt.ParseWithClaims(tknStr, claims, func(token *jwt.Token) (interface{}, error) {
-			return jwtKey, nil
-		})
-
-		if err != nil {
-			if err.Error() == jwt.ErrSignatureInvalid.Error() {
-				w.WriteHeader(http.StatusForbidden)
-				response = &schema.Response{Code: 403, StatusCode: "403", Status: "ERROR", Message: FORBIDDEN, Payload: schema.SchemaInterface{}}
-			} else {
-				w.WriteHeader(http.StatusBadRequest)
-				response = &schema.Response{Code: 400, StatusCode: "400", Status: "ERROR", Message: "Bad Request", Payload: schema.SchemaInterface{}}
-			}
-		} else {
-			if !tkn.Valid {
-				w.WriteHeader(http.StatusForbidden)
-				response = &schema.Response{Code: 403, StatusCode: "403", Status: "ERROR", Message: FORBIDDEN, Payload: schema.SchemaInterface{}}
-			} else {
-				response = &schema.Response{Code: 200, StatusCode: "200", Status: "OK", Message: "Access granted", Payload: schema.SchemaInterface{}}
-				w.WriteHeader(http.StatusOK)
-			}
-		}
+	// ensure we don't have nil - it will cause a null pointer exception
+	if r.Body == nil {
+		r.Body = ioutil.NopCloser(bytes.NewBufferString(""))
 	}
+	body, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		msg := "EchoHandler body data error %v"
+		b := responseErrorFormat(http.StatusInternalServerError, w, msg, err)
+		fmt.Fprintf(w, string(b))
+		return
+	}
+
+	conn.Trace("Request body : %s", string(body))
+
+	// unmarshal result from mw backend
+	errs := json.Unmarshal(body, &req)
+	if errs != nil {
+		msg := "EchoHandler could not unmarshal input data from servisBOT to schema %v"
+		conn.Error(msg, errs)
+		b := responseErrorFormat(http.StatusInternalServerError, w, msg, errs)
+		fmt.Fprintf(w, string(b))
+		return
+	}
+	response = &schema.Response{Code: http.StatusOK, Status: "OK", Message: req.Message}
 	b, _ := json.MarshalIndent(response, "", "	")
-	conn.Debug(fmt.Sprintf("AuthHandler response : %s", string(b)))
+	conn.Debug(fmt.Sprintf("EchoHandler response : %s", string(b)))
 	fmt.Fprintf(w, string(b))
 }
 
 func IsAlive(w http.ResponseWriter, r *http.Request) {
 	addHeaders(w, r)
-	fmt.Fprintf(w, "{ \"version\" : \""+os.Getenv("VERSION")+"\" , \"name\": \"AuthInterface\" }")
+	fmt.Fprintf(w, "{ \"version\" : \""+os.Getenv("VERSION")+"\" , \"name\": \"golang-simple-oc4service\" }")
 	return
 }
 
@@ -93,4 +66,13 @@ func addHeaders(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Access-Control-Allow-Methods", "POST, GET, OPTIONS, PUT, DELETE")
 	w.Header().Set("Access-Control-Allow-Headers", "Accept, Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization")
+}
+
+// responsErrorFormat - utility function
+func responseErrorFormat(code int, w http.ResponseWriter, msg string, val ...interface{}) []byte {
+	var b []byte
+	response := &schema.Response{Code: code, Status: "ERROR", Message: fmt.Sprintf(msg, val...)}
+	w.WriteHeader(code)
+	b, _ = json.MarshalIndent(response, "", "	")
+	return b
 }
