# pkg/schema/schema.go
@@ -1,18 +1,13 @@
 package schema
 
-// ShcemaInterface - acts as an interface wrapper for our profile schema
-// All the go microservices will using this schema
-type SchemaInterface struct {
-	ID         string `json:"_id,omitempty"`
-	LastUpdate int64  `json:"lastupdate,omitempty"`
-	MetaInfo   string `json:"metainfo,omitempty"`
+type Request struct {
+	Id      string `json:"id,omitemptye"`
+	Message string `json:"message"`
 }
 
 // Response schema
 type Response struct {
-	Code       int             `json:"code,omitempty"`
-	StatusCode string          `json:"statuscode"`
-	Status     string          `json:"status"`
-	Message    string          `json:"message"`
-	Payload    SchemaInterface `json:"payload"`
+	Code    int    `json:"code,omitempty"`
+	Status  string `json:"status"`
+	Message string `json:"message"`
 }
