# swaggerui/openapi.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "description": "OpenAPI standard for MyPortfolio",
+    "description": "OpenAPI standard for OC4 Tekton POC",
     "title": "authservice-api",
     "version": "1.0.1",
     "contact": {
@@ -11,7 +11,7 @@
     }
   },
   "paths": {
-    "/authservice/api/v2/sys/info/isalive": {
+    "/api/v1/sys/info/isalive": {
       "get": {
         "summary": "Openshift readiness and liveliness probes",
         "responses": {
@@ -28,34 +28,24 @@
         }
       }
     },
-    "/authservice/api/v1/verify": {
+    "/api/v1/echo": {
       "post": {
-        "summary": "Api endpoint that calls the middleware login api to get profile data",
-        "operationId": "verify",
+        "summary": "Api endpoint that calls the echo endpoint",
+        "operationId": "echo",
         "requestBody": {
-          "description": "Verify JWT Token",
+          "description": "Simple echo service",
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Response"
+                "$ref": "#/components/schemas/Request"
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Setup the document store database",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Response"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
+            "description": "Call success",
             "content": {
               "application/json": {
                 "schema": {
@@ -97,154 +87,6 @@
   ],
   "components": {
     "schemas": {
-      "SchemaInterface": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "object",
-            "format": "int64"
-          },
-          "lastupdate": {
-            "type": "number",
-            "format": "int64"
-          },
-          "metainfo": {
-            "type": "string"
-          },
-          "affiliates": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Affiliate"
-            }
-          },
-          "publications": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Publication"
-            }
-          },
-          "stocks": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Stock"
-            }
-          },
-          "watch": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Watchlist"
-            }
-          }
-        }
-      },
-      "Affiliate": {
-        "type": "object",
-        "properties": {
-          "uid": {
-            "type": "object",
-            "format": "int64"
-          },
-          "id": {
-            "type": "number",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          },
-          "token": {
-            "type": "string"
-          }
-        }
-      },
-      "Publication": {
-        "type": "object",
-        "properties": {
-          "uid": {
-            "type": "object",
-            "format": "int64"
-          },
-          "id": {
-            "type": "number",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          },
-          "affiliateid": {
-            "type": "number",
-            "format": "int64"
-          }
-        }
-      },
-      "Watchlist": {
-        "type": "object",
-        "properties": {
-          "uid": {
-            "type": "object",
-            "format": "int64"
-          },
-          "customerid": {
-            "type": "number",
-            "format": "int64"
-          },
-          "stocks": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Stock"
-            }
-          }
-        }
-      },
-      "Stock": {
-        "type": "object",
-        "properties": {
-          "uid": {
-            "type": "object",
-            "format": "int64"
-          },
-          "publicationid": {
-            "type": "number",
-            "format": "int64"
-          },
-          "affiliateid": {
-            "type": "number",
-            "format": "int64"
-          },
-          "refid": {
-            "type": "number",
-            "format": "int64"
-          },
-          "symbol": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "buy": {
-            "type": "number",
-            "format": "float64"
-          },
-          "stop": {
-            "type": "number",
-            "format": "float64"
-          },
-          "last": {
-            "type": "number",
-            "format": "float64"
-          },
-          "change": {
-            "type": "number",
-            "format": "float64"
-          },
-          "recommendation": {
-            "type": "string"
-          },
-          "status": {
-            "type": "number",
-            "format": "int64"
-          }
-        }
-      },
       "Response": {
         "type": "object",
         "properties": {
@@ -252,20 +94,26 @@
             "type": "number",
             "format": "int64"
           },
-          "statuscode": {
-            "type": "string"
-          },
           "status": {
             "type": "string"
           },
           "message": {
             "type": "string"
+          }
+        }
+      },
+      "Request": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
           },
-          "payload": {
-            "$ref": "#/components/schemas/SchemaInterface"
+          "message": {
+            "type": "string"
           }
         }
       }
+
     },
     "responses": {
       "NotFound": {
